# ANPR

./: .gitignore  CMakeLists.txt  Dockerfile
examples/: example.go
include/: imageop.h  ocr_core.h  ocrcore.h  onnx_model.h  onnxmodel.h  plate_finder.h  plate_reader.h  platefinder.h  platereader.h
meta/: c_wrapper.h  types.h  version.h  weights.h
src/: c_wrapper.cpp  image_op.cpp  imageop.cpp  ocr_core.cpp  ocrcore.cpp  onnx_model.cpp  onnxmodel.cpp  plate_finder.cpp  plate_reader.cpp  platefinder.cpp  platereader.cpp
tests/: debug.cpp
